FIX: FIX: case sensitive correction in ui files (update)

--- a/Resources/UI/qSlicerLongitudinalPETCTStudySelectionWidget.ui
+++ b/Resources/UI/qSlicerLongitudinalPETCTStudySelectionWidget.ui
@@ -214,7 +214,7 @@
   <customwidget>
    <class>ctkDoubleSlider</class>
    <extends>QWidget</extends>
-   <header>ctkdoubleslider.h</header>
+   <header>ctkDoubleSlider.h</header>
    <container>1</container>
   </customwidget>
  </customwidgets>
