--- a/Resources/UI/qSlicerLongitudinalPETCTReportTableWidget.ui
+++ b/Resources/UI/qSlicerLongitudinalPETCTReportTableWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>525</width>
-    <height>328</height>
+    <height>174</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,7 +30,7 @@
     <number>6</number>
    </property>
    <item>
-    <layout class="QGridLayout" name="gridLayout" columnstretch="0,1">
+    <layout class="QGridLayout" name="gridLayout" columnstretch="0,1,0,0,0">
      <property name="leftMargin">
       <number>0</number>
      </property>
@@ -43,34 +43,73 @@
      <property name="bottomMargin">
       <number>5</number>
      </property>
-     <property name="horizontalSpacing">
-      <number>12</number>
+     <property name="spacing">
+      <number>0</number>
      </property>
-     <property name="verticalSpacing">
-      <number>8</number>
-     </property>
-     <item row="0" column="0">
-      <widget class="QLabel" name="LabelSelected">
+     <item row="2" column="1" colspan="3">
+      <widget class="QLabel" name="Label_Studies">
        <property name="styleSheet">
-        <string notr="true">font-weight: 600;</string>
+        <string notr="true">QLabel {background-color: #555;color:#FEFEFE; }</string>
        </property>
        <property name="text">
-        <string> Currently Selected:</string>
+        <string>STUDIES</string>
        </property>
        <property name="alignment">
-        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+        <set>Qt::AlignCenter</set>
        </property>
       </widget>
      </item>
-     <item row="0" column="1">
-      <widget class="QLabel" name="LabelSelectedValue">
-       <property name="text">
-        <string/>
-       </property>
-      </widget>
-     </item>
-     <item row="1" column="0" colspan="2">
+     <item row="3" column="1" colspan="3">
       <widget class="QTableWidget" name="TableReport"/>
+     </item>
+     <item row="3" column="0">
+      <widget class="QLabel" name="Label_Findings">
+       <property name="styleSheet">
+        <string notr="true">QLabel {background-color: #555;color:#FEFEFE; }</string>
+       </property>
+       <property name="text">
+        <string>F
+I
+N
+D
+I
+G
+S</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignCenter</set>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1" colspan="3">
+      <layout class="QHBoxLayout" name="horizontalLayout">
+       <property name="spacing">
+        <number>8</number>
+       </property>
+       <property name="margin">
+        <number>4</number>
+       </property>
+       <item>
+        <widget class="QLabel" name="LabelSelected">
+         <property name="styleSheet">
+          <string notr="true">font-weight: 600;</string>
+         </property>
+         <property name="text">
+          <string> Currently Selected:</string>
+         </property>
+         <property name="alignment">
+          <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="LabelSelectedValue">
+         <property name="text">
+          <string/>
+         </property>
+        </widget>
+       </item>
+      </layout>
      </item>
     </layout>
    </item>
