--- a/Resources/UI/qSlicerLongitudinalPETCTFindingSelectionWidget.ui
+++ b/Resources/UI/qSlicerLongitudinalPETCTFindingSelectionWidget.ui
@@ -13,120 +13,163 @@
   <property name="windowTitle">
    <string>Form</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
+  <layout class="QHBoxLayout" name="horizontalLayout">
    <property name="spacing">
     <number>0</number>
    </property>
    <item>
-    <layout class="QFormLayout" name="FormLayout">
-     <property name="sizeConstraint">
-      <enum>QLayout::SetMaximumSize</enum>
+    <layout class="QVBoxLayout" name="verticalLayout_2">
+     <property name="spacing">
+      <number>0</number>
      </property>
-     <property name="fieldGrowthPolicy">
-      <enum>QFormLayout::FieldsStayAtSizeHint</enum>
-     </property>
-     <property name="horizontalSpacing">
-      <number>12</number>
-     </property>
-     <property name="verticalSpacing">
-      <number>12</number>
-     </property>
-     <item row="0" column="0">
-      <widget class="QLabel" name="LabelSelectFinding">
-       <property name="text">
-        <string>Select Finding:</string>
+     <item>
+      <layout class="QFormLayout" name="FormLayout">
+       <property name="sizeConstraint">
+        <enum>QLayout::SetMaximumSize</enum>
        </property>
-      </widget>
-     </item>
-     <item row="1" column="0">
-      <widget class="QLabel" name="LabelPlaceROI">
-       <property name="text">
-        <string>Place ROI:</string>
+       <property name="fieldGrowthPolicy">
+        <enum>QFormLayout::FieldsStayAtSizeHint</enum>
        </property>
-      </widget>
-     </item>
-     <item row="0" column="1">
-      <layout class="QHBoxLayout" name="horizontalLayout_2">
-       <item>
-        <widget class="qMRMLNodeComboBox" name="MRMLNodeComboBoxFinding" native="true"/>
-       </item>
-       <item>
-        <spacer name="horizontalSpacer_2">
-         <property name="orientation">
-          <enum>Qt::Horizontal</enum>
-         </property>
-         <property name="sizeHint" stdset="0">
-          <size>
-           <width>50</width>
-           <height>20</height>
-          </size>
-         </property>
-        </spacer>
-       </item>
-       <item>
-        <widget class="ctkCheckBox" name="CheckBoxROIVisiblity">
+       <property name="horizontalSpacing">
+        <number>12</number>
+       </property>
+       <property name="verticalSpacing">
+        <number>12</number>
+       </property>
+       <item row="0" column="0">
+        <widget class="QLabel" name="LabelSelectFinding">
          <property name="text">
-          <string>ROI visibility</string>
+          <string>Select Finding:</string>
          </property>
-         <property name="checked">
-          <bool>true</bool>
+        </widget>
+       </item>
+       <item row="1" column="0">
+        <widget class="QLabel" name="LabelPlaceROI">
+         <property name="text">
+          <string>Place ROI:</string>
          </property>
-         <property name="indicatorIcon" stdset="0">
+        </widget>
+       </item>
+       <item row="0" column="1">
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="qMRMLNodeComboBox" name="MRMLNodeComboBoxFinding" native="true"/>
+         </item>
+         <item>
+          <spacer name="horizontalSpacer_2">
+           <property name="orientation">
+            <enum>Qt::Horizontal</enum>
+           </property>
+           <property name="sizeHint" stdset="0">
+            <size>
+             <width>50</width>
+             <height>20</height>
+            </size>
+           </property>
+          </spacer>
+         </item>
+         <item>
+          <widget class="ctkCheckBox" name="CheckBoxROIVisiblity">
+           <property name="text">
+            <string>ROI visibility</string>
+           </property>
+           <property name="checked">
+            <bool>true</bool>
+           </property>
+           <property name="indicatorIcon" stdset="0">
+            <iconset resource="../qSlicerLongitudinalPETCTModule.qrc">
+             <normaloff>:/Icons/VisibleOn.png</normaloff>
+             <normalon>:/Icons/VisibleOff.png</normalon>:/Icons/VisibleOn.png</iconset>
+           </property>
+           <property name="indicatorIconSize" stdset="0">
+            <size>
+             <width>21</width>
+             <height>21</height>
+            </size>
+           </property>
+          </widget>
+         </item>
+        </layout>
+       </item>
+       <item row="1" column="1">
+        <widget class="QPushButton" name="ButtonPlaceROI">
+         <property name="text">
+          <string/>
+         </property>
+         <property name="icon">
           <iconset resource="../qSlicerLongitudinalPETCTModule.qrc">
-           <normaloff>:/Icons/VisibleOn.png</normaloff>
-           <normalon>:/Icons/VisibleOff.png</normalon>:/Icons/VisibleOn.png</iconset>
+           <normaloff>:/Icons/AnnotationROIWithArrow.png</normaloff>:/Icons/AnnotationROIWithArrow.png</iconset>
          </property>
-         <property name="indicatorIconSize" stdset="0">
+         <property name="iconSize">
           <size>
-           <width>21</width>
-           <height>21</height>
+           <width>18</width>
+           <height>18</height>
           </size>
+         </property>
+         <property name="checkable">
+          <bool>true</bool>
          </property>
         </widget>
        </item>
       </layout>
      </item>
-     <item row="1" column="1">
-      <widget class="QPushButton" name="ButtonPlaceROI">
-       <property name="text">
-        <string/>
+     <item>
+      <spacer name="verticalSpacer">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
        </property>
-       <property name="icon">
-        <iconset resource="../qSlicerLongitudinalPETCTModule.qrc">
-         <normaloff>:/Icons/AnnotationROIWithArrow.png</normaloff>:/Icons/AnnotationROIWithArrow.png</iconset>
-       </property>
-       <property name="iconSize">
+       <property name="sizeHint" stdset="0">
         <size>
-         <width>18</width>
-         <height>18</height>
+         <width>20</width>
+         <height>40</height>
         </size>
        </property>
-       <property name="checkable">
-        <bool>true</bool>
+      </spacer>
+     </item>
+     <item>
+      <widget class="QPushButton" name="ButtonAddSegmentationToFinding">
+       <property name="text">
+        <string>Add Segmentation to Finding</string>
        </property>
       </widget>
      </item>
     </layout>
    </item>
    <item>
-    <widget class="QPushButton" name="ButtonAddSegmentationToFinding">
-     <property name="text">
-      <string>Add Segmentation to Finding</string>
+    <layout class="QVBoxLayout" name="verticalLayout">
+     <property name="spacing">
+      <number>0</number>
      </property>
-    </widget>
-   </item>
-   <item>
-    <spacer name="verticalSpacer">
-     <property name="orientation">
-      <enum>Qt::Vertical</enum>
-     </property>
-     <property name="sizeHint" stdset="0">
-      <size>
-       <width>20</width>
-       <height>40</height>
-      </size>
-     </property>
-    </spacer>
+     <item>
+      <widget class="QLabel" name="LabelInfo">
+       <property name="styleSheet">
+        <string notr="true">QLabel QToolTip {background-color: #858585; color: #FFF;}</string>
+       </property>
+       <property name="text">
+        <string/>
+       </property>
+       <property name="pixmap">
+        <pixmap resource="../qSlicerLongitudinalPETCTModule.qrc">:/Icons/help.png</pixmap>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignRight|Qt::AlignTop|Qt::AlignTrailing</set>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <spacer name="verticalSpacer_2">
+       <property name="orientation">
+        <enum>Qt::Vertical</enum>
+       </property>
+       <property name="sizeHint" stdset="0">
+        <size>
+         <width>20</width>
+         <height>40</height>
+        </size>
+       </property>
+      </spacer>
+     </item>
+    </layout>
    </item>
   </layout>
  </widget>
