--- a/Resources/UI/qSlicerLongitudinalPETCTReportTableWidget.ui
+++ b/Resources/UI/qSlicerLongitudinalPETCTReportTableWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>525</width>
-    <height>174</height>
+    <height>191</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -30,7 +30,7 @@
     <number>6</number>
    </property>
    <item>
-    <layout class="QGridLayout" name="gridLayout" columnstretch="0,1,0,0,0">
+    <layout class="QGridLayout" name="gridLayout" columnstretch="0,1,0,0">
      <property name="leftMargin">
       <number>0</number>
      </property>
@@ -47,9 +47,12 @@
       <number>0</number>
      </property>
      <item row="2" column="1" colspan="3">
-      <widget class="QLabel" name="Label_Studies">
+      <widget class="QLabel" name="LabelStudies">
        <property name="styleSheet">
-        <string notr="true">QLabel {background-color: #555;color:#FEFEFE; }</string>
+        <string notr="true">QLabel {background-color: #888;color:#FEFEFE; }</string>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
        </property>
        <property name="text">
         <string>STUDIES</string>
@@ -63,9 +66,12 @@
       <widget class="QTableWidget" name="TableReport"/>
      </item>
      <item row="3" column="0">
-      <widget class="QLabel" name="Label_Findings">
+      <widget class="QLabel" name="LabelFindings">
        <property name="styleSheet">
-        <string notr="true">QLabel {background-color: #555;color:#FEFEFE; }</string>
+        <string notr="true">QLabel {background-color: #888;color:#FEFEFE; }</string>
+       </property>
+       <property name="frameShape">
+        <enum>QFrame::StyledPanel</enum>
        </property>
        <property name="text">
         <string>F
@@ -73,6 +79,7 @@ I
 N
 D
 I
+N
 G
 S</string>
        </property>
@@ -82,11 +89,20 @@ S</string>
       </widget>
      </item>
      <item row="0" column="1" colspan="3">
-      <layout class="QHBoxLayout" name="horizontalLayout">
+      <layout class="QHBoxLayout" name="horizontalLayout" stretch="0,1,0">
        <property name="spacing">
         <number>8</number>
        </property>
-       <property name="margin">
+       <property name="leftMargin">
+        <number>0</number>
+       </property>
+       <property name="topMargin">
+        <number>0</number>
+       </property>
+       <property name="rightMargin">
+        <number>4</number>
+       </property>
+       <property name="bottomMargin">
         <number>4</number>
        </property>
        <item>
@@ -95,7 +111,7 @@ S</string>
           <string notr="true">font-weight: 600;</string>
          </property>
          <property name="text">
-          <string> Currently Selected:</string>
+          <string>Currently Selected:</string>
          </property>
          <property name="alignment">
           <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignVCenter</set>
@@ -106,6 +122,19 @@ S</string>
         <widget class="QLabel" name="LabelSelectedValue">
          <property name="text">
           <string/>
+         </property>
+        </widget>
+       </item>
+       <item>
+        <widget class="QLabel" name="LabelInfo">
+         <property name="styleSheet">
+          <string notr="true">QLabel QToolTip {background-color: #858585; color: #FFF;}</string>
+         </property>
+         <property name="text">
+          <string/>
+         </property>
+         <property name="pixmap">
+          <pixmap resource="../qSlicerLongitudinalPETCTModule.qrc">:/Icons/help.png</pixmap>
          </property>
         </widget>
        </item>
