--- a/Resources/qSlicerLongitudinalPETCTModule.qrc
+++ b/Resources/qSlicerLongitudinalPETCTModule.qrc
@@ -1,12 +1,13 @@
 <RCC>
   <qresource prefix="/">
+    <file>Icons/help/roi_click1.png</file>
+    <file>Icons/help/roi_click2.png</file>
     <file>Icons/help/expdbtn.png</file>
     <file>Icons/help/checkbox.png</file>
     <file>Icons/AnnotationROIWithArrow.png</file>
     <file>Icons/ViewSpin.png</file>
     <file>Icons/qual_icon.png</file>
     <file>Icons/quan_icon.png</file>
-    <file>Icons/LongPETCT.png</file>
     <file>Icons/VisibleOff.png</file>
     <file>Icons/VisibleOn.png</file>
     <file>Icons/VisibleOffSmall.png</file>
