--- a/Resources/UI/qSlicerLongitudinalPETCTAnalysisSettingsWidget.ui
+++ b/Resources/UI/qSlicerLongitudinalPETCTAnalysisSettingsWidget.ui
@@ -31,7 +31,7 @@
         </sizepolicy>
        </property>
        <property name="toolTip">
-        <string>Click here for Qualitative Analysis</string>
+        <string>Click here to open the qualitative analysis comparison view</string>
        </property>
        <property name="text">
         <string> Qualitative Analysis</string>
@@ -69,14 +69,14 @@
         </sizepolicy>
        </property>
        <property name="toolTip">
-        <string>Click here for Quantitative Analysis</string>
+        <string>Click here to open the quantitative analysis chart view for the computed SUV values</string>
        </property>
        <property name="text">
         <string> Quantitative Analysis</string>
        </property>
        <property name="icon">
         <iconset resource="../qSlicerLongitudinalPETCTModule.qrc">
-         <normaloff>:/Icons/LongPETCT.png</normaloff>:/Icons/LongPETCT.png</iconset>
+         <normaloff>:/Icons/quan_icon.png</normaloff>:/Icons/quan_icon.png</iconset>
        </property>
        <property name="iconSize">
         <size>
@@ -121,13 +121,13 @@
      <property name="verticalSpacing">
       <number>4</number>
      </property>
-     <item row="1" column="0" rowspan="2">
-      <widget class="qSlicerLongitudinalPETCTStudySelectionTableWidget" name="TableStudyAnalysisSelection" native="true">
-       <property name="sizePolicy">
-        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
-         <horstretch>0</horstretch>
-         <verstretch>0</verstretch>
-        </sizepolicy>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label">
+       <property name="text">
+        <string>Select studies for comparison:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
        </property>
       </widget>
      </item>
@@ -139,18 +139,21 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="toolTip">
+        <string>Show/hide expandable volume rendering settings panel</string>
+       </property>
        <property name="text">
         <string>...</string>
        </property>
       </widget>
      </item>
-     <item row="0" column="0">
-      <widget class="QLabel" name="label">
-       <property name="text">
-        <string>Select studies for comparison:</string>
-       </property>
-       <property name="alignment">
-        <set>Qt::AlignBottom|Qt::AlignLeading|Qt::AlignLeft</set>
+     <item row="1" column="0" rowspan="2">
+      <widget class="qSlicerLongitudinalPETCTStudySelectionTableWidget" name="TableStudyAnalysisSelection" native="true">
+       <property name="sizePolicy">
+        <sizepolicy hsizetype="Expanding" vsizetype="Preferred">
+         <horstretch>0</horstretch>
+         <verstretch>0</verstretch>
+        </sizepolicy>
        </property>
       </widget>
      </item>
@@ -165,6 +168,9 @@
         </property>
         <item>
          <widget class="QPushButton" name="ButtonVolumeRendering">
+          <property name="toolTip">
+           <string>Enable/disable volume rendering of the PET image data</string>
+          </property>
           <property name="text">
            <string/>
           </property>
@@ -198,6 +204,9 @@
         </item>
         <item>
          <widget class="QPushButton" name="ButtonSpinView">
+          <property name="toolTip">
+           <string>Enable/disable spinning of the PET image data volume rendering</string>
+          </property>
           <property name="text">
            <string/>
           </property>
@@ -238,14 +247,17 @@
        </property>
       </spacer>
      </item>
+     <item row="3" column="0">
+      <widget class="QPushButton" name="ButtonExportCSV">
+       <property name="toolTip">
+        <string>Export the calculated SUV values to a Comma-separated values (csv) file </string>
+       </property>
+       <property name="text">
+        <string>Export csv-file </string>
+       </property>
+      </widget>
+     </item>
     </layout>
-   </item>
-   <item>
-    <widget class="QPushButton" name="ButtonExportCSV">
-     <property name="text">
-      <string>Export csv-file </string>
-     </property>
-    </widget>
    </item>
    <item>
     <spacer name="verticalSpacer">
