--- a/Resources/UI/qSlicerLongitudinalPETCTFindingSettingsDialog.ui
+++ b/Resources/UI/qSlicerLongitudinalPETCTFindingSettingsDialog.ui
@@ -55,6 +55,9 @@
      </item>
      <item row="0" column="1" colspan="3">
       <widget class="QLineEdit" name="LineEditName">
+       <property name="toolTip">
+        <string>Rename the Finding here</string>
+       </property>
        <property name="maxLength">
         <number>35</number>
        </property>
@@ -81,6 +84,9 @@
          <verstretch>0</verstretch>
         </sizepolicy>
        </property>
+       <property name="toolTip">
+        <string>Select the type of the Finding</string>
+       </property>
        <property name="iconSize">
         <size>
          <width>24</width>
@@ -94,6 +100,9 @@
        <property name="enabled">
         <bool>false</bool>
        </property>
+       <property name="toolTip">
+        <string>Remove the selected Finding type</string>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -105,6 +114,9 @@
      </item>
      <item row="4" column="3">
       <widget class="QPushButton" name="ButtonAddType">
+       <property name="toolTip">
+        <string>Add the new Finding type to the list</string>
+       </property>
        <property name="styleSheet">
         <string notr="true"/>
        </property>
@@ -135,6 +147,9 @@
      </item>
      <item row="4" column="1">
       <widget class="QPushButton" name="ButtonColor">
+       <property name="toolTip">
+        <string>Select a color for the new Finding type</string>
+       </property>
        <property name="styleSheet">
         <string notr="true"/>
        </property>
@@ -145,6 +160,9 @@
      </item>
      <item row="4" column="2">
       <widget class="QLineEdit" name="LineEditTypeName">
+       <property name="toolTip">
+        <string>Name the new Finding type</string>
+       </property>
        <property name="text">
         <string/>
        </property>
@@ -170,6 +188,9 @@
          <horstretch>0</horstretch>
          <verstretch>0</verstretch>
         </sizepolicy>
+       </property>
+       <property name="toolTip">
+        <string>Show/hide Finding type creation input panel</string>
        </property>
        <property name="text">
         <string>...</string>
