--- a/Resources/UI/qSlicerLongitudinalPETCTStudySelectionWidget.ui
+++ b/Resources/UI/qSlicerLongitudinalPETCTStudySelectionWidget.ui
@@ -56,7 +56,7 @@
         <item>
          <widget class="QPushButton" name="ButtonVolumeRendering">
           <property name="toolTip">
-           <string>Volume Rendering</string>
+           <string>Enable/disable volume rendering of the PET image data</string>
           </property>
           <property name="text">
            <string/>
@@ -89,7 +89,7 @@
         <item>
          <widget class="QPushButton" name="ButtonSpinView">
           <property name="toolTip">
-           <string>Spin Volume Rendering View</string>
+           <string>Enable/disable spinning of the PET image data volume rendering</string>
           </property>
           <property name="text">
            <string/>
@@ -133,12 +133,15 @@
             <height>35</height>
            </size>
           </property>
+          <property name="toolTip">
+           <string>Modify the exponential function for the volume rendering opacity</string>
+          </property>
          </widget>
         </item>
         <item>
          <widget class="QDoubleSpinBox" name="SpinBoxOpacityPow">
           <property name="toolTip">
-           <string>Modify the exponential function for the volume rendering opacity.</string>
+           <string>Modify the exponential function for the volume rendering opacity</string>
           </property>
           <property name="decimals">
            <number>1</number>
@@ -195,6 +198,9 @@
            <height>0</height>
           </size>
          </property>
+         <property name="toolTip">
+          <string>Show/hide expandable volume rendering settings panel</string>
+         </property>
          <property name="checkable">
           <bool>true</bool>
          </property>
@@ -212,6 +218,9 @@
    </item>
    <item>
     <widget class="QCheckBox" name="CheckBoxStudiesCentered">
+     <property name="toolTip">
+      <string>Select to center image data in the view. Unselect to maintain original position.</string>
+     </property>
      <property name="text">
       <string>Show studies centered</string>
      </property>
