--- a/Resources/UI/qSlicerLongitudinalPETCTFindingSelectionWidget.ui
+++ b/Resources/UI/qSlicerLongitudinalPETCTFindingSelectionWidget.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>411</width>
-    <height>211</height>
+    <height>118</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -101,7 +101,7 @@
        <item row="1" column="1">
         <widget class="QPushButton" name="ButtonPlaceROI">
          <property name="toolTip">
-          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;A Region of Interest can be placed around a lesion with two clicks on one of the slice views:&lt;table cellspacing=&quot;5&quot;&gt;&lt;tbody&gt;&lt;tr style=&quot;vertical-align: middle;&quot;&gt;&lt;td&gt;&lt;img src=&quot;:/Icons/help/roi_click1.png&quot;/&gt;&lt;/td&gt;&lt;td&gt;First click on the center of the lesion&lt;/td&gt;&lt;/tr&gt;&lt;tr style=&quot;vertical-align: middle;&quot;&gt;&lt;td&gt;&lt;img src=&quot;:/Icons/help/roi_click2.png&quot;/&gt;&lt;/td&gt;&lt;td&gt;Then click on the most remote corner &lt;/td&gt;&lt;/tr&gt;&lt;/tbody&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
+          <string>&lt;html&gt;&lt;head/&gt;&lt;body&gt;&lt;p&gt;A Region of Interest can be placed around a lesion with two clicks on one of the slice views:&lt;table cellspacing=&quot;5&quot;&gt;&lt;tbody&gt;&lt;tr style=&quot;vertical-align: middle;&quot;&gt;&lt;td&gt;&lt;img src=&quot;:/Icons/help/roi_click1.png&quot;/&gt;&lt;/td&gt;&lt;td&gt;First click on the center of the lesion to define the center of the ROI&lt;/td&gt;&lt;/tr&gt;&lt;tr style=&quot;vertical-align: middle;&quot;&gt;&lt;td&gt;&lt;img src=&quot;:/Icons/help/roi_click2.png&quot;/&gt;&lt;/td&gt;&lt;td&gt;Then click on another point for setting one of the ROI's corners&lt;/td&gt;&lt;/tr&gt;&lt;/tbody&gt;&lt;/table&gt;&lt;/body&gt;&lt;/html&gt;</string>
          </property>
          <property name="text">
           <string/>
