--- a/Resources/UI/qSlicerLongitudinalPETCTModuleSettingsDialog.ui
+++ b/Resources/UI/qSlicerLongitudinalPETCTModuleSettingsDialog.ui
@@ -7,7 +7,7 @@
     <x>0</x>
     <y>0</y>
     <width>345</width>
-    <height>194</height>
+    <height>220</height>
    </rect>
   </property>
   <property name="sizePolicy">
@@ -55,17 +55,10 @@
       <number>10</number>
      </property>
      <item>
-      <widget class="QCheckBox" name="CheckBoxCenterVolumes">
-       <property name="text">
-        <string>Center Volumes</string>
-       </property>
-       <property name="checked">
-        <bool>false</bool>
-       </property>
-      </widget>
-     </item>
-     <item>
       <widget class="QCheckBox" name="CheckBoxVolumeRendering">
+       <property name="toolTip">
+        <string>Select whether volume rendering of PET image data should be displayed in 3D view.</string>
+       </property>
        <property name="text">
         <string>Volume Rendering</string>
        </property>
@@ -77,6 +70,9 @@
      </item>
      <item>
       <widget class="QCheckBox" name="CheckBoxSpinning">
+       <property name="toolTip">
+        <string>Select whether volume rendering of PET image data should be spinning.</string>
+       </property>
        <property name="text">
         <string>Spinning</string>
        </property>
@@ -87,9 +83,29 @@
       </widget>
      </item>
      <item>
-      <widget class="QCheckBox" name="CheckBoxMakeModels">
+      <widget class="QCheckBox" name="CheckBoxCenterVolumes">
+       <property name="toolTip">
+        <string>Select whether all image data should be centered in the view.</string>
+       </property>
        <property name="text">
-        <string>Make Models</string>
+        <string>Center Volumes</string>
+       </property>
+       <property name="icon">
+        <iconset resource="../qSlicerLongitudinalPETCTModule.qrc">
+         <normaloff>:/Icons/center_volumes.png</normaloff>:/Icons/center_volumes.png</iconset>
+       </property>
+       <property name="checked">
+        <bool>false</bool>
+       </property>
+      </widget>
+     </item>
+     <item>
+      <widget class="QCheckBox" name="CheckBoxMakeModels">
+       <property name="toolTip">
+        <string>Select whether modles of segmentations should be generated.</string>
+       </property>
+       <property name="text">
+        <string>Models</string>
        </property>
        <property name="icon">
         <iconset resource="../qSlicerLongitudinalPETCTModule.qrc">
@@ -105,6 +121,42 @@
       <enum>Qt::Horizontal</enum>
      </property>
     </widget>
+   </item>
+   <item>
+    <layout class="QFormLayout" name="formLayout">
+     <property name="labelAlignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+     <property name="formAlignment">
+      <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+     </property>
+     <item row="0" column="0">
+      <widget class="QLabel" name="label_2">
+       <property name="styleSheet">
+        <string notr="true">font-style: italic;</string>
+       </property>
+       <property name="text">
+        <string>Note:</string>
+       </property>
+       <property name="alignment">
+        <set>Qt::AlignLeading|Qt::AlignLeft|Qt::AlignTop</set>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="1">
+      <widget class="QLabel" name="label">
+       <property name="styleSheet">
+        <string notr="true">font-style: italic;</string>
+       </property>
+       <property name="text">
+        <string>Settings will only apply after restart.</string>
+       </property>
+       <property name="wordWrap">
+        <bool>true</bool>
+       </property>
+      </widget>
+     </item>
+    </layout>
    </item>
    <item>
     <widget class="QDialogButtonBox" name="ButtonBox">
