--- a/Resources/UI/qSlicerLongitudinalPETCTReportSelectionWidget.ui
+++ b/Resources/UI/qSlicerLongitudinalPETCTReportSelectionWidget.ui
@@ -180,7 +180,7 @@
       <item row="3" column="0">
        <widget class="QLabel" name="LabelSize">
         <property name="text">
-         <string>Size:</string>
+         <string>Height:</string>
         </property>
         <property name="alignment">
          <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
