Initial commit of Longitudinal PET/CT Analysis Extension V.02
DICOM Plugin updates:
- DICOMLoadable caching for performance improvement
- Selection from multiple CTs for PET
- PET only support
- Usage of PETSUVImageMaker module to generate normalized volumes

Module updates:
- Registration of PET/CT studies image volumes
- Module settings sidebar
- PET color selection presets
- CT Window/Level selection presets
- ReportOverview Table provides statistics in cells
- Additional segmentation statistics: StdDev, Count, Volcc, Volmm3

--- a/Resources/qSlicerLongitudinalPETCTModule.qrc
+++ b/Resources/qSlicerLongitudinalPETCTModule.qrc
@@ -1,29 +1,44 @@
 <RCC>
-    <qresource prefix="/">
-        <file>Icons/center_volumes.png</file>
-        <file>Icons/SlicerModels.png</file>
-        <file>Icons/help/roi_click1.png</file>
-        <file>Icons/help/roi_click2.png</file>
-        <file>Icons/help/expdbtn.png</file>
-        <file>Icons/help/checkbox.png</file>
-        <file>Icons/AnnotationROIWithArrow.png</file>
-        <file>Icons/ViewSpin.png</file>
-        <file>Icons/qual_icon.png</file>
-        <file>Icons/quan_icon.png</file>
-        <file>Icons/VisibleOff.png</file>
-        <file>Icons/VisibleOn.png</file>
-        <file>Icons/VisibleOffSmall.png</file>
-        <file>Icons/VisibleOnSmall.png</file>
-        <file>Icons/GPURendering.png</file>
-        <file>Icons/ViewRock.png</file>
-        <file>Icons/VolumeRendering.png</file>
-        <file>Icons/add.png</file>
-        <file>Icons/delete.png</file>
-        <file>Icons/help.png</file>
-        <file>Icons/SlicerLoadDICOM.png</file>
-        <file>Icons/placeholder.png</file>
-        <file>Icons/settings_small.png</file>
-        <file>Icons/SlicesLabelOutline.png</file>
-        <file>Icons/Transforms.png</file>
-    </qresource>
+  <qresource prefix="/">
+    <file>Icons/input.png</file>
+    <file>Icons/ROICenter.png</file>
+    <file>Icons/ROIRadius.png</file>
+    <file>Icons/finding_presets_aorta.png</file>
+    <file>Icons/finding_presets_cerebellum.png</file>
+    <file>Icons/finding_presets_liver.png</file>
+    <file>Icons/finding_presets_node.png</file>
+    <file>Icons/finding_presets_tumor.png</file>
+    <file>Icons/Colors-PET-MIP.png</file>
+    <file>Icons/Colors-PET-Heat.png</file>
+    <file>Icons/Colors-PET-Rainbow.png</file>
+    <file>Icons/WindowLevelPreset-Abdomen.png</file>
+    <file>Icons/WindowLevelPreset-Brain.png</file>
+    <file>Icons/WindowLevelPreset-CT-bone.png</file>
+    <file>Icons/WindowLevelPreset-Lung.png</file>
+    <file>Icons/center_volumes.png</file>
+    <file>Icons/SlicerModels.png</file>
+    <file>Icons/help/roi_click1.png</file>
+    <file>Icons/help/roi_click2.png</file>
+    <file>Icons/help/expdbtn.png</file>
+    <file>Icons/help/checkbox.png</file>
+    <file>Icons/AnnotationROIWithArrow.png</file>
+    <file>Icons/ViewSpin.png</file>
+    <file>Icons/qual_icon.png</file>
+    <file>Icons/quan_icon.png</file>
+    <file>Icons/VisibleOff.png</file>
+    <file>Icons/VisibleOn.png</file>
+    <file>Icons/VisibleOffSmall.png</file>
+    <file>Icons/VisibleOnSmall.png</file>
+    <file>Icons/GPURendering.png</file>
+    <file>Icons/ViewRock.png</file>
+    <file>Icons/VolumeRendering.png</file>
+    <file>Icons/add.png</file>
+    <file>Icons/delete.png</file>
+    <file>Icons/help.png</file>
+    <file>Icons/SlicerLoadDICOM.png</file>
+    <file>Icons/placeholder.png</file>
+    <file>Icons/settings_small.png</file>
+    <file>Icons/SlicesLabelOutline.png</file>
+    <file>Icons/Transforms.png</file>
+  </qresource>
 </RCC>
